syntax = "proto3";
package dk.via.fleetforward.gRPC;
option csharp_namespace = "GrpcAPI.Protos";
import "google/protobuf/any.proto";
enum HandlerTypeProto {
  HANDLER_UNKNOWN = 0;
  HANDLER_COMPANY = 1;
  HANDLER_DRIVER = 2;
  HANDLER_DISPATCHER = 3;
  HANDLER_AUTH = 4;
}

enum ActionTypeProto {
  ACTION_UNKNOWN = 0;
  ACTION_CREATE = 1;
  ACTION_GET = 2;
  ACTION_UPDATE = 3;
  ACTION_DELETE = 4;
  ACTION_LIST = 5;
}

enum StatusTypeProto {
  STATUS_UNKNOWN = 0;
  STATUS_OK = 1;
  STATUS_ERROR = 2;
  STATUS_INVALID_PAYLOAD = 3;
}

message CompanyProto {
  string mc_number = 1;
  string company_name = 2;
}

message RequestProto {
  HandlerTypeProto handler = 1;
  ActionTypeProto action = 2;
  google.protobuf.Any payload = 3;
}

message ResponseProto {
  StatusTypeProto status = 1;
  google.protobuf.Any payload = 2;
}
message CompanyProtoList {
  repeated CompanyProto companies = 1;
}

service FleetServiceProto {
  rpc SendRequest (RequestProto) returns (ResponseProto);
}
message UserProto{
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
  string password = 6;
  UserRoleProto role = 7;
}
enum UserRoleProto{
  UNKNOWN_ROLE = 0;
  USER_DISPATCHER = 1;
  USER_DRIVER =2;
}
enum StatusDriverProto{
  UNKNOWN = 0;
  AVAILABLE = 1;
  BUSY = 2;
  OFF_DUTY = 3;
}
enum DriverCompanyRoleProto{
  UNKNOWN_ROLE_COMPANY = 0;
  DRIVER = 1;
  OWNER_OPERATOR = 2;
}
enum TrailerTypeProto{
  UNKNOWN_TRAILER = 0;
  DRY_VAN = 1;
  FLATBED = 2;
  REEFER = 3;
}
message DriverProto{
  string companyMcNumber = 1;
  StatusDriverProto driverStatus = 2;
  DriverCompanyRoleProto companyRole = 3;
  TrailerTypeProto trailerType = 4;
  string currentState = 5;
  int32 currentZIPCODE = 6;
  UserProto user =7;
}
message DriverListProto{
  repeated DriverProto drivers = 1;
}
message DispatcherProto{
  double currentRate = 1;
  repeated int32 driversAssigned = 2;
  UserProto user =3;
}
message DispatcherListProto{
  repeated DispatcherProto dispatchers = 1;
}